ArchPO-the-2th-sem/platform/mesh/traffic-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traffic-demo
  labels:
    istio-injection: enabled
